--- a/APP/css/common.css
+++ b/APP/css/common.css
@@ -70,7 +70,7 @@ input {
   font-family: 'Microsoft YaHei'; }
 
 .common-button {
-  background: #22be69 !important;
+  background: #09bb07 !important;
   font-size: 0.16rem;
   color: #fff;
   text-align: center;
