--- a/APP/css/map.css
+++ b/APP/css/map.css
@@ -96,7 +96,7 @@ html, body, .vue {
     top: -0.8rem;
     width: 0.6rem;
     height: 0.6rem;
-    background: #22be69 url("../images/refresh.png") no-repeat 0.18rem 0.08rem;
+    background: #09bb07 url("../images/refresh.png") no-repeat 0.18rem 0.08rem;
     background-size: 0.22rem;
     border-radius: 100%;
     padding-top: 0.36rem;
