--- a/APP/css/myCar.css
+++ b/APP/css/myCar.css
@@ -14,7 +14,8 @@
     overflow: hidden; }
     .main .carInfoItem .carImg {
       width: 0.75rem;
-      height: 0.75rem; }
+      height: 0.75rem;
+      border-radius: 0.04rem; }
     .main .carInfoItem .info {
       width: 2.56rem;
       height: 0.75rem; }
