--- a/APP/css/oilWearDetail.css
+++ b/APP/css/oilWearDetail.css
@@ -1,3 +1,17 @@
+.month-date {
+  text-align: center;
+  font-size: 0.14rem;
+  line-height: 0.4rem;
+  background: #fff; }
+  .month-date div {
+    width: 0.4rem;
+    height: 0.4rem;
+    background: url("../images/left.png") no-repeat center;
+    background-size: 0.16rem; }
+  .month-date .fr {
+    background: url("../images/right.png") no-repeat center;
+    background-size: 0.16rem; }
+
 header {
   width: 100%;
   height: 0.66rem;
