--- a/APP/css/set.css
+++ b/APP/css/set.css
@@ -2,17 +2,11 @@ header {
   background: #fff;
   padding: 0.2rem 0.16rem;
   font-size: 0; }
-  header img {
-    width: 0.6rem;
-    height: 0.6rem;
-    vertical-align: middle;
-    border-radius: 100%; }
   header div {
     display: inline-block;
     vertical-align: middle;
     font-size: 0.14rem;
-    color: #444444;
-    margin-left: 0.16rem; }
+    color: #444444; }
 
 .main {
   background: #fff;
