--- a/guqin/css/class.css
+++ b/guqin/css/class.css
@@ -1,6 +1,7 @@
 .main {
   height: 5.74rem;
-  overflow-y: auto; }
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch; }
   .main .box {
     margin-top: 0.1rem;
     background: #fff;
