--- a/guqin/css/index.css
+++ b/guqin/css/index.css
@@ -10,7 +10,9 @@ div {
 .main {
   height: 5.8rem;
   overflow-y: auto;
-  -webkit-overflow-scrolling: touch; }
+  -webkit-overflow-scrolling: touch;
+  box-sizing: border-box;
+  padding-bottom: 0.5rem; }
 
 .title {
   line-height: 0.54rem;
