--- a/guqin/css/store.css
+++ b/guqin/css/store.css
@@ -4,7 +4,9 @@ img {
 .main {
   height: 5.74rem;
   overflow-y: auto;
-  -webkit-overflow-scrolling: touch; }
+  -webkit-overflow-scrolling: touch;
+  box-sizing: border-box;
+  padding-bottom: 0.5rem; }
   .main img {
     height: 2rem; }
   .main .content {
