--- a/guqin/css/classDetail.css
+++ b/guqin/css/classDetail.css
@@ -66,7 +66,7 @@ img {
     position: absolute;
     top: 0;
     left: 1.4rem;
-    background: #f3f3f3;
+    background: #eee;
     z-index: 1; }
   .title .cont::before {
     content: "";
